It needs to be a mutable list
Signed-off-by: cpw <cpw+github@weeksfamily.ca>